--- a/demo_applications/FingerForce_LSTM/app/build.gradle
+++ b/demo_applications/FingerForce_LSTM/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "27.0.0"
+    buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "ch.ethz.inf.vs.fingerforce"
         minSdkVersion 21
